# hmsshell

./: .gitignore  README.md  Setup.hs  hmsshell.cabal
System/: Win32.hs
System/Win32/: Shell.hs
System/Win32/Shell/: NotifyIconData.hsc  ShellFunctions.hsc
tests/: Main.hs  Main.hsc  Tests.hs
