name: hmsshell
version: 1.0
license: BSD3
homepage:	https://github.com/dvigal/hmsshell
build-type: Simple
cabal-version: >=1.6

Library
    build-depends: base >= 3 && < 5, Win32 >= 2.2.2.0, hmsguid >= 1.0
    ghc-options: -Wall -fno-warn-name-shadowing
    cc-options: -fno-strict-aliasing
    exposed-modules:
        System.Win32.Shell
        System.Win32.Shell.NotifyIconData
        System.Win32.Shell.ShellFunctions
    extensions: ForeignFunctionInterface, CPP

source-repository head
    type:     git
    location: git://github.com/dvigal/hmsshell   	